--- a/views/base.pug
+++ b/views/base.pug
@@ -8,14 +8,14 @@ html
     nav#navbar
         ul
             div#olearn
-                img(src='../static/img/logo.jpg' alt='logo' style='width:120px;')
+                h1 Olearn            
             li #[a(href="/") Categories ]    
             li #[a(href="/") Premium Courses ]
             li #[a(href="/") Olearn Business ]
             li #[a(href="/") Courses ]
             li #[a(href="/") My learning ]
             li #[a(href="/") Blog ]
-            li #[a(href="/") Contact Us ]
+            li #[a(href="/contact") Contact Us ]
             li #[a(href="/") sign up ]
             img.login(src='../static/img/login.png' alt='logo')
     hr
