--- a/views/index.pug
+++ b/views/index.pug
@@ -9,14 +9,14 @@ html
     nav#navbar
         ul
             div#olearn
-                img(src='../static/img/logo.jpg' alt='logo' style='width:120px;')
+                h1 Olearn
             li #[a(href="/") Categories ]    
             li #[a(href="/") Premium Courses ]
             li #[a(href="/") Olearn Business ]
             li #[a(href="/") Courses ]
             li #[a(href="/") My learning ]
             li #[a(href="/") Blog ]
-            li #[a(href="/") Contact Us ]
+            li #[a(href="/contact") Contact Us ]
             li #[a(href="/") sign up ]
             img.login(src='../static/img/login.png' alt='logo')
     nav#navbar1
@@ -30,7 +30,7 @@ html
             li #[a(href="/") Marketing ]
             li #[a(href="/") Finance ]
             li #[a(href="/") Music ]
-    
+
     section#offers 
         h1.head Sale ends tonight
         p.head New look, same ambitions. Reach your potential with courses from ₹490.
@@ -112,9 +112,9 @@ html
         div.teach1
             h2 Top companies choose Olearn Business to build in-demand career skills.
             img(src="../static/img/apple.png", alt="Apple")
-            img.white(src="../static/img/netflix.png", alt="Apple")
-            img.white(src="../static/img/box.png", alt="Apple")
-            img(src="../static/img/even.png", alt="Apple")
+            img.white(src="../static/img/netflix.png", alt="Netflix")
+            img.white(src="../static/img/box.png", alt="box")
+            img(src="../static/img/even.png", alt="eventile")
 
     footer#footer 
         | Copyright © 2021 OnlinelearningPlatform.com | All right reserved
